--- a/site_receitas/templates/receita.html
+++ b/site_receitas/templates/receita.html
@@ -5,7 +5,7 @@
     <!-- Preloader -->
     <div id="preloader">
         <i class="circle-preloader"></i>
-        <img src="img/core-img/hamburger.png" alt="">
+        <img src="{% static 'sites_receitas/img/core-img/hamburger.png' %}" alt="">
     </div>
 
     <!-- Search Wrapper -->
@@ -54,7 +54,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="receipe-slider owl-carousel">
-                        <img src="img/bg-img/tomate_banner.jpg">
+                        <img src="{% static 'sites_receitas/img/bg-img/tomate_banner.jpg' %}">
                     </div>
                 </div>
             </div>
@@ -67,12 +67,12 @@
                 <div class="row">
                     <div class="col-12 col-md-8">
                         <div class="receipe-headline my-5">
-                            <span>30 de Fevereiro, 2000</span>
-                            <h2>Nome da receita</h2>
+                            <span>Data da receita: {{ receita.data_receita }}</span>
+                            <h2>Nome da receita: {{ receita.nome_receitas }}</h2>
                             <div class="receipe-duration">
-                                <h6>Preparo: 15 minutos</h6>
-                                <h6>Rendimento: 2 porçoes</h6>
-                                <h6>Categoria: categoria</h6>
+                                <h6>Preparo: {{ receita.tempo_preparo }}</h6>
+                                <h6>Rendimento: {{ receita.rendimento }}</h6>
+                                <h6>Categoria: {{ receita.Categoria }}</h6>
                                 <h6>Por: Pessoa</h6>
                             </div>
                         </div>
@@ -82,17 +82,15 @@
                     <div class="col-12 col-lg-8">
                         <!-- Single Preparation Step -->
                         <div class="single-preparation-step d-flex">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec varius dui. Suspendisse potenti. Vestibulum ac pellentesque tortor. Aenean congue sed metus in iaculis. Cras a tortor enim. Phasellus posuere vestibulum ipsum, eget lobortis purus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-                        </div>
+                            <p> Modo preparo: {{ receita.modo_preparo}} </p>
                     </div>
 
                     <!-- Ingredientes -->
                     <div class="col-12 col-lg-4">
                         <div class="ingredients">
-                            <h4>Ingredientees</h4>
+                            <h4>Ingredientes</h4>
                             <div class="ingredients">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nec varius dui. Suspendisse potenti. Vestibulum ac pellentesque tortor. Aenean congue sed metus in iaculis. Cras a tortor enim. Phasellus posuere vestibulum ipsum, eget lobortis purus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. </p>
-                            </p>
+                                <p> {{ receita.Ingredientes}} </p>
                             </div>
                         </div>
                     </div>
