--- a/site_receitas/templates/receita.html
+++ b/site_receitas/templates/receita.html
@@ -72,7 +72,7 @@
                             <div class="receipe-duration">
                                 <h6>Preparo: {{ receita.tempo_preparo }}</h6>
                                 <h6>Rendimento: {{ receita.rendimento }}</h6>
-                                <h6>Categoria: {{ receita.Categoria }}</h6>
+                                <h6>Categoria: {{ receita.categoria }}</h6>
                                 <h6>Por: Pessoa</h6>
                             </div>
                         </div>
@@ -90,7 +90,7 @@
                         <div class="ingredients">
                             <h4>Ingredientes</h4>
                             <div class="ingredients">
-                                <p> {{ receita.Ingredientes}} </p>
+                                <p> {{ receita.ingredientes}} </p>
                             </div>
                         </div>
                     </div>
